--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
 <!-- Cover -->
-<div class="mobile-cover">
+<div class="cover">
    <div class="width">
       <img src="{% static 'images/covers/cover-main.jpg' %}" alt="" class="cover-img-lillehammer">
       <div class="content" id="coverContent">
