--- a/static/scss/global/global.css
+++ b/static/scss/global/global.css
@@ -99,4 +99,10 @@ p.link:hover {
 #backToTop.menu-active {
   opacity: 0;
   pointer-events: none;
+}
+
+@media only screen and (min-device-width: 1140px) {
+  html, body {
+    background: rgb(246, 246, 246) !important;
+  }
 }/*# sourceMappingURL=global.css.map */
