--- a/static/scss/global/global.scss
+++ b/static/scss/global/global.scss
@@ -110,3 +110,9 @@ p{
   }
 }
 
+
+@media only screen and (min-device-width: 1140px) {
+  html, body {
+    background:  rgb(246,246,246) !important;
+  }
+}
