--- a/static/scss/store/base.scss
+++ b/static/scss/store/base.scss
@@ -3,8 +3,8 @@ $white: rgb(246,246,246);
 $primBtn: #06c484;
 $txt: #183b56;
 
-// Mob cover
-.mobile-cover{
+// Cover
+.cover{
   width: 100%;
   height: max-content;
   position: relative;
@@ -34,7 +34,7 @@ $txt: #183b56;
       text-align: center;
       .cover-heading{
         color: $white;
-        font-size: 27px;
+        font-size: 26px;
         margin-bottom: 15px;
         font-weight: 800;
       }
@@ -265,6 +265,272 @@ $txt: #183b56;
       &:focus, &:active{
         transform: scale(1.08);
         filter: brightness(93%);
+      }
+    }
+  }
+}
+
+// // SMALL DESKTOP
+@media only screen and (min-device-width: 1140px) {
+  // Cover
+  .cover{
+    .cover-img-lillehammer{
+      filter: brightness(35%);
+    }
+    .content{
+      padding-top: 100px;
+      padding-bottom: 45px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding-inline: 105px;
+      .text{
+        text-align: left;
+        width: 450px;
+        .cover-heading{
+        }
+      }
+      .cover-search{
+        position: relative;
+        padding: 25px 15px;
+        background: rgba(185, 185, 185, 0.15);
+        max-width: 460px;
+        top: -12px;
+        i{
+          position: absolute;
+          font-size: 15px;
+          color: #183b56a9;
+          right: 35px;
+          top: 43px;
+          padding: 7px;
+          margin: -7px;
+          background: rgba(155, 155, 155, 0.22);
+          border-radius: 100%;
+        }
+        input{
+          width: 100%;
+          height: 50px;
+          border: none;
+          outline: none;
+          padding: 7px 17px;
+          background: $white;
+          color: $txt;
+          border-radius: 4px;
+          font-size: 15px;
+          &:hover{
+            filter: brightness(92%);
+            cursor: pointer;
+          }
+          &:active, &:focus{
+            filter: brightness(100%);
+            cursor: text;
+          }
+          &::placeholder{
+            color: $txt;
+            opacity: 0.8;
+          }
+        }
+        button{
+          font-size: 14.5px;
+          background: $primBtn;
+          color: $white;
+          text-align: center;
+          width: 100%;
+          height: 45px;
+          margin-top: 15px;
+          border-radius: 4px;
+          outline: none;
+          border: none;
+          font-weight: normal;
+        }
+      }
+    }
+  }
+  // Services
+  .services{
+    width: 100%;
+    height: auto;
+    .content{
+      padding: 35px 15px;
+      padding-bottom: 52px;
+      .text{
+        text-align: center;
+      }
+      .services-cards{
+        z-index: 100;
+        margin-top: 15px;
+        display: flex;
+        overflow-x: scroll;
+        padding-top: 25px;
+        padding-bottom: 45px;
+        padding-inline: 20px;
+        &::-webkit-scrollbar{
+            height: 7px;
+            display: block;
+            background: rgba(130, 130, 130, 0.1);
+            cursor: pointer !important;
+          }
+          &::-webkit-scrollbar-thumb{
+            border-radius: 10px;
+            background-color: rgba(130, 130, 130, 0.25);
+            cursor: pointer !important;
+        }
+        .service{
+          min-width: 200px;
+          max-width: 200px;
+          height: min-content;
+          margin: 0 25px;
+          position: relative;
+          transition: .2s;
+          cursor: pointer;
+          .service-image{
+            width: 100%;
+            height: 105px;
+            object-fit: cover;
+            filter: brightness(90%);
+            border-radius: 4px
+          }
+          .reviews{
+            display: flex;
+            margin-block: 3px;
+            p{
+              margin-bottom: 0;
+              color: #FFBC55;
+              font-size: 12px;
+              margin-top: 1px;
+              i{
+                transform: translateY(-0.9px);
+                margin-right: 3px;
+                font-size: 11px;
+              }
+            }
+            span{
+              color: rgb(170, 170, 170);
+              font-size: 11px;
+              transform: translateX(4px) translateY(2px);
+            }
+          }
+          .name{
+            font-size: 17px;
+            color: $txt;
+            margin-bottom: 2px;
+          }
+          .business-name{
+            font-size: 12px;
+            color: $txt;
+            opacity: 0.7;
+          }
+          .short-des{
+            margin-top: 8px;
+            color: $txt;
+            font-size: 15px;
+            opacity: 0.9;
+          }
+          button{
+            margin-top: 15px;
+            height: 38px;
+            color: $txt;
+            border: none;
+            text-align: center;
+            border-radius: 4px;
+            background: transparent;
+            width: 95%;
+            background: rgba(190,190,190,0.2);
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            display: none;
+            &:hover{
+              filter: brightness(100%);
+            }
+          }
+          &:first-child{
+            margin-left: 0;
+          }
+          &:hover{
+            .name{
+              text-decoration: underline;
+            }
+            .service-image{
+              transition: .2s;
+              filter: brightness(85%);
+            }
+          }
+        }
+      }
+    }
+  }
+  // Categories
+  .categories{
+    width: 100%;
+    height: auto;
+    .content{
+      padding: 0 25px;
+      padding-top: 5px;
+      padding-bottom: 20px;
+      .text{
+        text-align: center;
+      }
+    }
+    .cat-cards{
+      padding-block: 25px;
+      margin-top: 10px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      .cat{
+        width: 100%;
+        max-width: 380px;
+        min-width: 320px;
+        display: flex;
+        justify-content: space-between;
+        margin: 10px 20px;
+        padding: 14px;
+        background: white;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: .2s;
+        border: 1px solid rgba(200,200,200,0.1);
+        &:first-child{
+          margin-top: 10px;
+        }
+        &:last-child{
+          margin-bottom: 10px;
+        }
+        .icon{
+          width: 17%;
+          transform: translateX(4px) translateY(4px);
+          i{
+            font-size: 20px;
+            color: $txt;
+            border-radius: 100%;
+            color: $primBtn;
+          }
+        }
+        .text{
+          text-align: left;
+          width: 84%;
+          h1{
+            margin-top: 0;
+            margin-bottom: 4px;
+            font-size: 18px;
+            color: $txt;
+          }
+          p{
+            color: $txt;
+            font-size: 13px;
+            opacity: 0.9;
+          }
+        }
+        &:hover{
+          transform: scale(1.05);
+          filter: brightness(95%);
+        }
+        &:focus, &:active{
+          transform: scale(1.08);
+          filter: brightness(93%);
+        }
       }
     }
   }
