--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -268,7 +268,7 @@
   }
   #desNav {
     width: 100%;
-    height: 68px;
+    height: 65px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -288,11 +288,12 @@
     position: absolute;
     left: 0;
     top: -60px;
-    background: rgba(255, 255, 255, 0.9254901961);
+    background: white;
     width: 100%;
     height: 100%;
     opacity: 0;
-    transition: 0.5s;
+    transition: 0.3s;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   }
   #desNav.sticky {
     position: fixed;
@@ -304,12 +305,24 @@
     position: absolute;
     left: 0;
     top: 0;
-    background: rgba(255, 255, 255, 0.9254901961);
+    background: white;
     width: 100%;
     height: 100%;
     opacity: 1;
     transition: 0.5s;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  }
+  #desNav.sticky .desktop-nav-content .logo h1 {
+    color: #183b56;
+  }
+  #desNav.sticky .desktop-nav-content .logo h1 span {
+    border-color: #06c484;
+  }
+  #desNav.sticky .desktop-nav-content .menu a {
+    color: #183b56;
+  }
+  #desNav.sticky .desktop-nav-content .menu a.nav_order_btn {
+    color: rgb(246, 246, 246);
   }
   #desNav .desktop-nav-content {
     display: flex;
@@ -322,21 +335,24 @@
     transform: translateX(-50%);
   }
   #desNav .desktop-nav-content .logo {
-    transition: 0.3s;
+    transition: 0.8s;
     cursor: pointer;
-  }
-  #desNav .desktop-nav-content .logo img {
+    transform: translateY(4px);
+    width: auto;
     height: auto;
-    width: 117px;
+    z-index: 1000;
   }
-  #desNav .desktop-nav-content .logo img.logo1 {
+  #desNav .desktop-nav-content .logo h1 {
+    color: rgb(246, 246, 246);
+    font-size: 18px;
+  }
+  #desNav .desktop-nav-content .logo h1 span {
+    font-size: 13px;
+    border-bottom: 1px solid rgb(246, 246, 246);
+    padding-bottom: 3px;
+  }
+  #desNav .desktop-nav-content .logo .logo2 {
     display: none;
-  }
-  #desNav .desktop-nav-content .logo img.logo2 {
-    display: block;
-  }
-  #desNav .desktop-nav-content .logo:hover {
-    transform: scale(1.05);
   }
   #desNav .desktop-nav-content .menu {
     padding-inline: 10px;
@@ -348,181 +364,33 @@
     justify-content: center;
     align-items: center;
   }
-  #desNav .desktop-nav-content .menu .order {
-    margin-right: 0;
-    text-decoration: none;
-    transform: translateX(10px);
-  }
-  #desNav .desktop-nav-content .menu .order a {
-    cursor: pointer;
-    text-decoration: none;
+  #desNav .desktop-nav-content .menu a {
+    color: rgb(246, 246, 246);
     font-size: 16px;
-    border-radius: 4px;
-    background: #0088F9;
-    color: #F9F6EE;
-    padding: 12px 14px;
-  }
-  #desNav .desktop-nav-content .menu .order a:hover {
-    background: #249cff;
-  }
-  #desNav .desktop-nav-content .menu .menu-main-links {
-    color: #183b56;
-    font-size: 17px;
-    padding-inline: 7px;
-    margin-inline: 16px;
     text-decoration: none;
+    padding: 0 8px;
+    margin-inline: 8px;
+    padding-bottom: 5px;
+    padding-top: 7px;
     transition: 0.2s;
-    cursor: default;
-    padding-block: 23px;
-    opacity: 0.9;
+    border-bottom: 1px solid transparent;
   }
-  #desNav .desktop-nav-content .menu .menu-main-links.no-drop {
-    padding-bottom: 10px;
-    margin-bottom: 13px;
-    border-bottom: 2px solid transparent;
+  #desNav .desktop-nav-content .menu a:hover {
+    border-bottom: 1px solid rgb(246, 246, 246);
   }
-  #desNav .desktop-nav-content .menu .menu-main-links.no-drop:hover {
-    border-bottom: 2px solid #183b56;
+  #desNav .desktop-nav-content .menu a:first-child {
+    margin-left: 0;
   }
-  #desNav .desktop-nav-content .menu .drop-link {
-    list-style: none;
-    cursor: pointer;
-    width: 100%;
-    padding: 14px;
-    text-align: center !important;
+  #desNav .desktop-nav-content .menu a:last-child {
+    margin-right: 0;
   }
-  #desNav .desktop-nav-content .menu .drop-link a {
-    text-decoration: none;
-    color: #183b56;
-    font-size: 16px;
-    padding-top: 14px;
-    padding-bottom: 15px;
-    text-align: center !important;
+  #desNav .desktop-nav-content .menu a.nav_order_btn {
+    background: #06c484;
+    border-radius: 4px;
+    padding: 8px 17px;
   }
-  #desNav .desktop-nav-content .menu .drop-link a:hover {
-    text-decoration: underline;
-  }
-  #desNav .desktop-nav-content .menu .drop-link a.last {
-    border: none;
-  }
-  #desNav .desktop-nav-content .menu .des-menu-account {
-    position: relative;
-    width: auto;
-  }
-  #desNav .desktop-nav-content .menu .des-menu-account:hover #accountDrop {
-    opacity: 1;
-    pointer-events: visible;
-  }
-  #desNav .desktop-nav-content .menu .des-menu-account #accountDrop {
-    background: rgba(255, 255, 255, 0.9254901961);
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
-    height: auto;
-    position: absolute;
-    top: 47px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: inline-block;
-    border: 2px solid rgb(228, 228, 228);
-    border-top: none;
-    transition: 0.3s;
-    opacity: 0;
-    pointer-events: none;
-    text-align: center;
-    border-radius: 20px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    text-align: center !important;
-  }
-  #desNav .desktop-nav-content .menu .des-menu-prices {
-    position: relative;
-    width: auto;
-  }
-  #desNav .desktop-nav-content .menu .des-menu-prices:hover #pricesDrop {
-    opacity: 1;
-    pointer-events: visible;
-  }
-  #desNav .desktop-nav-content .menu .des-menu-prices #pricesDrop {
-    background: rgba(255, 255, 255, 0.9254901961);
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
-    height: auto;
-    position: absolute;
-    top: 47px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: inline-block;
-    border: 2px solid rgb(228, 228, 228);
-    border-top: none;
-    transition: 0.3s;
-    opacity: 0;
-    pointer-events: none;
-    text-align: center;
-    border-radius: 20px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    text-align: center !important;
-  }
-  #desNav .desktop-nav-content .menu .des-menu-about {
-    position: relative;
-    width: auto;
-  }
-  #desNav .desktop-nav-content .menu .des-menu-about:hover #aboutDrop {
-    opacity: 1;
-    pointer-events: visible;
-  }
-  #desNav .desktop-nav-content .menu .des-menu-about #aboutDrop {
-    background: rgba(255, 255, 255, 0.9254901961);
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
-    height: auto;
-    position: absolute;
-    top: 47px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: inline-block;
-    border: 2px solid rgb(228, 228, 228);
-    border-top: none;
-    transition: 0.3s;
-    opacity: 0;
-    pointer-events: none;
-    text-align: center;
-    border-radius: 20px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    text-align: center !important;
-  }
-  #desNav .desktop-nav-content .menu .des-menu-help {
-    position: relative;
-    width: auto;
-  }
-  #desNav .desktop-nav-content .menu .des-menu-help:hover #helpDrop {
-    opacity: 1;
-    pointer-events: visible;
-  }
-  #desNav .desktop-nav-content .menu .des-menu-help #helpDrop {
-    background: rgba(255, 255, 255, 0.9254901961);
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
-    height: auto;
-    position: absolute;
-    top: 47px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: inline-block;
-    border: 2px solid rgb(228, 228, 228);
-    border-top: none;
-    transition: 0.3s;
-    opacity: 0;
-    pointer-events: none;
-    text-align: center;
-    border-radius: 20px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    text-align: center !important;
+  #desNav .desktop-nav-content .menu a.nav_order_btn:hover {
+    filter: brightness(85%);
+    border-bottom: 1px solid transparent;
   }
 }/*# sourceMappingURL=nav.css.map */
