--- a/static/scss/store/product/product.css
+++ b/static/scss/store/product/product.css
@@ -3,15 +3,79 @@
 }
 
 #mobileNav {
-  padding-bottom: 100px;
-}
-#mobileNav .nav-search {
-  display: block;
-}
-
-.page {
+  position: absolute;
   background: white;
 }
+#mobileNav.sticky::before {
+  display: none;
+}
+
+.nav-search {
+  position: absolute;
+  top: 55px;
+  width: 100%;
+  padding-inline: 25px;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  text-align: center;
+  border-bottom: 1px solid rgba(40, 40, 40, 0.1);
+  z-index: 10000;
+  background: white;
+}
+.nav-search.sticky {
+  position: fixed;
+  top: 0;
+  box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
+}
+.nav-search i {
+  position: absolute;
+  font-size: 15px;
+  color: rgba(24, 59, 86, 0.662745098);
+  right: 40px;
+  top: 31px;
+  padding: 5px;
+  margin: -5px;
+  background: rgba(155, 155, 155, 0.22);
+  border-radius: 100%;
+}
+.nav-search input {
+  width: 100%;
+  height: 50px;
+  border: none;
+  outline: none;
+  padding: 7px;
+  background: white;
+  border: 1px solid rgb(240, 240, 240);
+  color: #183b56;
+  border-radius: 4px;
+  font-size: 15px;
+}
+.nav-search input::-moz-placeholder {
+  color: #183b56;
+  opacity: 0.8;
+}
+.nav-search input:-ms-input-placeholder {
+  color: #183b56;
+  opacity: 0.8;
+}
+.nav-search input::placeholder {
+  color: #183b56;
+  opacity: 0.8;
+}
+.nav-search button {
+  font-size: 14.5px;
+  background: #06c484;
+  color: rgb(246, 246, 246);
+  text-align: center;
+  width: 100%;
+  height: 45px;
+  margin-top: 15px;
+  border-radius: 4px;
+  outline: none;
+  border: none;
+  font-weight: normal;
+}
+
 .page .mapouter {
   width: 100%;
   height: 400px;
@@ -19,8 +83,54 @@
 
 .product-section {
   position: relative;
-  padding-top: 95px;
+  padding-top: 162px;
   padding-inline: 25px;
+}
+.product-section .carousel-control-prev {
+  opacity: 1;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  position: absolute;
+  top: calc(50% + 5px);
+  transform: translateY(-50%);
+  left: 8px;
+  padding: 6px 13px;
+  background: rgb(246, 246, 246);
+  color: #183b56;
+  border-radius: 100%;
+  font-size: 18px;
+  transition: 0.3s;
+}
+.product-section .carousel-control-prev:focus {
+  transform: translateY(-50%) scale(1.07);
+  filter: brightness(92%);
+}
+.product-section .carousel-control-next {
+  opacity: 1;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  position: absolute;
+  top: calc(50% + 5px);
+  transform: translateY(-50%);
+  right: 8px;
+  padding: 6px 13px;
+  background: rgb(246, 246, 246);
+  color: #183b56;
+  border-radius: 100%;
+  font-size: 18px;
+  transition: 0.3s;
+}
+.product-section .carousel-control-next:focus {
+  transform: translateY(-50%) scale(1.07);
+  filter: brightness(92%);
 }
 .product-section .product-image {
   width: 100%;
