--- a/apps/store/templates/core/product.html
+++ b/apps/store/templates/core/product.html
@@ -7,6 +7,7 @@
 {% block content %}
 <link rel="stylesheet" href="{% static '/scss/page/pages.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static '/scss/store/product/product.css' %}" type="text/css">
+<script rel="stylesheet" src="{% static '/js/product.js' %}" type="text/javascript"></script>
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
      integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
      crossorigin=""/>
@@ -15,39 +16,40 @@
  integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
  crossorigin=""></script>
 
-<div class="page">
-    <div class="product-section">
-        <img class="product-image" src="{{product.image}}" alt="product image">
-        <div class="text">
-            <div class="reviews">
-                <p><i class="fa-solid fa-star"></i>3</p><span>(40)</span>
-             </div>
-            <div class="name">{{product.name}}</div>
-            <div class="business-name">{{product.business_name}}</div>
+<!-- Only on some pages -->
+   <div class="nav-search" id="productSearch">
+    <form id="searchForm" action="{% url 'home_page_search' %}" method="GET">
+       {% csrf_token %}
+       <input name="q" type="text" placeholder="Søk blant 500 tjenester"><i class="fa-solid fa-magnifying-glass"></i>
+   </form>
+ </div>
+ <div class="page">
+     <div class="product-section">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="product-image" src="{{product.image}}" alt="product image">
+              </div>
+              <div class="carousel-item">
+                <img class="product-image" src="{{product.image}}" alt="product image">
+              </div>
+              <div class="carousel-item">
+                <img class="product-image" src="{{product.image}}" alt="product image">
+              </div>
+            </div>
+            <a data-slide="prev" role="button" class="carousel-control-prev" href="#carouselExampleControls">&#10094;</a>
+            <a data-slide="next" role="button" class="carousel-control-next" href="#carouselExampleControls">&#10095;</a>
+          </div>
+         <div class="text">
+             <div class="reviews">
+                 <p><i class="fa-solid fa-star"></i>3</p><span>(40)</span>
+                </div>
+                <div class="name">{{product.name}}</div>
+                <div class="business-name">{{product.business_name}}</div>
+            </div>
         </div>
-        <br>
-        <div id="map" style="height: 400px;"></div>
-    </div>
 </div>
 
-<script>
-    var map = L.map('map').setView([51.505, -0.09], 13);
-
-    L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 19,
-}).addTo(map);
-var marker = L.marker([51.5, -0.09]).addTo(map);
-var circle = L.circle([51.508, -0.11], {
-    color: 'red',
-    fillColor: '#f03',
-    fillOpacity: 0.5,
-    radius: 500
-}).addTo(map);
-var polygon = L.polygon([
-    [51.509, -0.08],
-    [51.503, -0.06],
-    [51.51, -0.047]
-]).addTo(map);
-</script>
-
+<br>
+<br>
 {% endblock %}
