--- a/static/scss/global/global.css
+++ b/static/scss/global/global.css
@@ -7,6 +7,7 @@
 }
 
 html, body {
+  position: relative;
   overflow-x: hidden;
   scroll-behavior: smooth;
   background: rgb(249, 249, 249) !important;
