--- a/static/scss/store/product/product.scss
+++ b/static/scss/store/product/product.scss
@@ -8,13 +8,74 @@ $txt: #183b56;
     border-top: 1px solid rgba(0,0,0,0.1);
 }
 #mobileNav{
-    padding-bottom: 100px;
-    .nav-search{
-        display: block;
+    position: absolute;
+    background: white;
+    &.sticky{
+        &::before{
+            display: none;
+        }
     }
 }
+
+.nav-search{
+    position: absolute;
+    top: 55px;
+    width: 100%;
+    padding-inline: 25px;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    text-align: center;
+    border-bottom: 1px solid rgba(40,40,40,0.1);
+    z-index: 10000;
+    background: white;
+    &.sticky{
+        position: fixed;
+        top: 0;
+        box-shadow: 0 0 4px rgba(5,5,5,0.12);
+    }
+    i{
+      position: absolute;
+      font-size: 15px;
+      color: #183b56a9;
+      right: 40px;
+      top: 31px;
+      padding: 5px;
+      margin: -5px;
+      background: rgba(155, 155, 155, 0.22);
+      border-radius: 100%;
+    }
+    input{
+      width: 100%;
+      height: 50px;
+      border: none;
+      outline: none;
+      padding: 7px;
+      background: white;
+      border: 1px solid rgb(240,240,240);
+      color: $txt;
+      border-radius: 4px;
+      font-size: 15px;
+      &::placeholder{
+        color: $txt;
+        opacity: 0.8;
+      }
+    }
+    button{
+      font-size: 14.5px;
+      background: $primBtn;
+      color: $white;
+      text-align: center;
+      width: 100%;
+      height: 45px;
+      margin-top: 15px;
+      border-radius: 4px;
+      outline: none;
+      border: none;
+      font-weight: normal;
+    }
+}
+
 .page{
-    background:  white;
     .mapouter{
         width: 100%;
         height: 400px;
@@ -22,8 +83,46 @@ $txt: #183b56;
 }
 .product-section{
     position: relative;
-    padding-top: 95px;
+    padding-top: 162px;
     padding-inline: 25px;
+    .carousel-control-prev{
+        opacity: 1;
+        width: max-content;
+        height: max-content;
+        position: absolute;
+        top: calc(50% + 5px);
+        transform: translateY(-50%);
+        left: 8px;
+        padding: 6px 13px;
+        background: $white;
+        color: $txt;
+        border-radius: 100%;
+        font-size: 18px;
+        transition: .3s;
+        &:focus{
+            transform: translateY(-50%) scale(1.07);
+            filter: brightness(92%);
+        }
+    }
+    .carousel-control-next{
+        opacity: 1;
+        width: max-content;
+        height: max-content;
+        position: absolute;
+        top: calc(50% + 5px);
+        transform: translateY(-50%);
+        right: 8px;
+        padding: 6px 13px;
+        background: $white;
+        color: $txt;
+        border-radius: 100%;
+        font-size: 18px;
+        transition: .3s;
+        &:focus{
+            transform: translateY(-50%) scale(1.07);
+            filter: brightness(92%);
+        }
+    }
     .product-image{
         width: 100%;
         height: 280px;
