--- a/apps/store/templates/core/product.html
+++ b/apps/store/templates/core/product.html
@@ -28,7 +28,7 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="product-image" src="{{product.image}}" alt="product image">
+                <img class="product-image" src="{{product.image.url}}" alt="product image">
               </div>
               <div class="carousel-item">
                 <img class="product-image" src="{{product.image}}" alt="product image">
